Resolves: tdf#78897 do not cache/reuse a repeat-filled string

Column widths or fonts or sizes may differ.

Change-Id: I1b4be9a6a6158e10439895534a8cb99c2ca408b7